[gd_scene load_steps=66 format=2]

[ext_resource path="res://Sprites/01-King Human/Idle (78x58).png" type="Texture" id=1]
[ext_resource path="res://Script/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/01-King Human/Run (78x58).png" type="Texture" id=3]
[ext_resource path="res://Sprites/01-King Human/Jump (78x58).png" type="Texture" id=5]
[ext_resource path="res://Sprites/01-King Human/Fall (78x58).png" type="Texture" id=6]
[ext_resource path="res://Sprites/01-King Human/Attack (78x58).png" type="Texture" id=7]
[ext_resource path="res://Scene/DirectionHitBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/HurtBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/01-King Human/Hit (78x58).png" type="Texture" id=10]
[ext_resource path="res://Sprites/01-King Human/Dead (78x58).png" type="Texture" id=11]
[ext_resource path="res://Scene/player/PlayerStatu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sprites/01-King Human/Door In (78x58).png" type="Texture" id=13]
[ext_resource path="res://Sprites/01-King Human/Door Out (78x58).png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 234, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 312, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 390, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 468, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 546, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 624, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 702, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 780, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 234, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 312, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 390, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 468, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 546, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 10 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 11 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 11 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 11 )
region = Rect2( 234, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 14 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 14 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 14 )
region = Rect2( 234, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 14 )
region = Rect2( 312, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 14 )
region = Rect2( 390, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 14 )
region = Rect2( 468, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 14 )
region = Rect2( 546, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 13 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 13 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 13 )
region = Rect2( 234, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 13 )
region = Rect2( 312, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 13 )
region = Rect2( 390, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 13 )
region = Rect2( 468, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 13 )
region = Rect2( 546, 0, 78, 58 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "Hit",
"speed": 10.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 49 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "Die",
"speed": 8.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "OutDoor",
"speed": 10.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "InDoor",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=74]
height = 6.0

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 10, 13 )

[sub_resource type="CapsuleShape2D" id=34]
radius = 16.0
height = 12.0

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 9.5, 13.5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -57, -30 )
frames = SubResource( 12 )
animation = "Idle"
centered = false
offset = Vector2( 25, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 74 )

[node name="PlayerStatu" parent="." instance=ExtResource( 12 )]

[node name="HurtBox" parent="." instance=ExtResource( 9 )]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 47 )

[node name="WeaponHitBox" parent="." instance=ExtResource( 8 )]

[node name="Position2D" parent="WeaponHitBox" index="0"]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" parent="WeaponHitBox/Position2D" index="0"]
position = Vector2( 23, 0 )
shape = SubResource( 34 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.5, -2.5 )
shape = SubResource( 48 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="WeaponHitBox/Position2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]

[editable path="HurtBox"]
[editable path="WeaponHitBox"]
